feat(weaver): upgrade to corda 4.12 and jvm 17
* upgrade gradle to 7.6.1
* upgrade to kotlin 1.9
* upgrade corda dependencies to 4.12 and java to 17
* update java to 17 for corda workflows
* generate corda 4.12 testnet artifacts
* use bootstrap-states.csv to init corda SimpleStates
* added FREE_UP_GITHUB_RUNNER_DISK_SPACE_DISABLED to
    free space on data-sharing-docker-local job using tools/ci.sh script

Signed-off-by: Sandeep Nishad <sandeep.nishad1@ibm.com>